k8s/app-db/service-db.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: go-example-db
  labels:
    app: go-example-db
    release: primary
spec:
  type: ClusterIP
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
  selector:
    app: go-example-db
    release: primary
