k8s/app-db/istio-app.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-example
spec:
  hosts:
  - go-example.acme.com
  - go-example
  gateways:
  - go-example
  http:
  - route:
    - destination:
        host: go-example
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-example
spec:
  host: go-example
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-example
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - go-example.acme.com
